After merge updates, dataAccess and database improved